--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,41 @@
-<h3>Automatch By</h3>
-<p>Local data of quotes -
-  <code>autoMatchBy</code>,
-  <code>autoMatch</code>,
-  <code>inputId</code> and
-  <code>required</code> and
-  <code>clearUnselected</code>
-</p>
-
-<div class="card">
-  <div class="card-block">
-    <div class="form-group row" [class.has-danger]="quoteRequired.invalid">
-      <div class="col-5">
-        <ngx-completer name="quoteRequired" [inputId]="'completer1'" [datasource]="dataService" [(ngModel)]="quote" (selected)="onSelectedQuote($event)"
-          [minSearchLength]="0" #quoteRequired="ngModel" [autoMatch]="true" [autoMatchBy]="'id'" [inputClass]="{ 'form-control': true, 'form-control-danger': quoteRequired.invalid }"
-          [clearUnselected]="true" [pause]="1000" required>
-        </ngx-completer>
-        <div *ngIf="!quoteRequired.valid" class="form-control-feedback">Sorry, quote is required
+<div class="container">
+      <div class="card">
+        <div class="card-body">
+          <div lcass="row">
+            <h3 class="card-title">Automatch By</h3>
+            <div class="card-text">
+              Local data of quotes -
+              <code>autoMatchBy</code>,
+              <code>autoMatch</code>,
+              <code>inputId</code> and
+              <code>required</code> and
+              <code>clearUnselected</code>
+            </div>
+          </div>
+          <div class="row" [class.has-danger]="quoteRequired.invalid">
+            <div class="col-md">
+              <label>Search quotes</label>
+              <ngx-completer name="quoteRequired" [inputId]="'completer1'" [datasource]="dataService" [(ngModel)]="quote" (selected)="onSelectedQuote($event)"
+                [minSearchLength]="0" #quoteRequired="ngModel" [autoMatch]="true" [autoMatchBy]="'id'" [inputClass]="{ 'form-control': true, 'is-invalid': quoteRequired.invalid }"
+                [clearUnselected]="quote !== '2'" [pause]="1000" initialValue="Testing initial value" required>
+              </ngx-completer>
+              <div *ngIf="quoteRequired.invalid">
+                Sorry, quote is required
+              </div>
+            </div>
+            <div class="col-md">
+              <div class="card">
+                <div class="card-body">
+                  <p class="form-control-static">
+                    <b>Displayed text: {{quote}}</b>
+                  </p>
+                  <p class="form-control-static">
+                    <b>Selected item: {{selectedQuote}}</b>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-6">
-        <p class="form-control-static">
-          <b>Displayed text: {{quote}}</b>
-        </p>
-        <p class="form-control-static">
-          <b>Selected item: {{selectedQuote}}</b>
-        </p>
-      </div>
     </div>
-  </div>
-</div>
