--- a/src/app/modules/ngx-completer/components/ngx-completer-dropdown/ngx-completer-dropdown.component.css
+++ b/src/app/modules/ngx-completer/components/ngx-completer-dropdown/ngx-completer-dropdown.component.css
@@ -1,11 +1,10 @@
-
-
 .completer-dropdown {
   border-color: #ececec;
   border-width: 1px;
   border-style: solid;
   border-radius: 2px;
-  width: 250px;
+  max-width: 94%;
+  width: auto;
   padding: 6px;
   cursor: pointer;
   z-index: 9999;
@@ -20,7 +19,7 @@
   margin-bottom: 4px;
   clear: both;
   display: inline-block;
-  width: 103%;
+  width: 100%;
 }
 
 .completer-selected-row {
