--- a/src/app/modules/ngx-completer/components/ngx-completer-dropdown/ngx-completer-dropdown.component.html
+++ b/src/app/modules/ngx-completer/components/ngx-completer-dropdown/ngx-completer-dropdown.component.html
@@ -1,7 +1,7 @@
 <div class="completer-dropdown" *ngIf="searchActive || error || items != null">
-  <div *ngIf="searchActive" class="completer-message">Please wait...</div>
-  <div *ngIf="error" class="completer-message">An error occurred while searching</div>
-  <div *ngIf="!searchActive && (items != null && items.length === 0)" class="completer-message">No results found</div>
+  <div *ngIf="searchActive" class="completer-message">{{ textSearching }}</div>
+  <div *ngIf="error" class="completer-message">An error has occurred</div>
+  <div *ngIf="!searchActive && (items != null && items.length === 0)" class="completer-message">{{ textNoResults }}</div>
   <div (mouseenter)="hovering = true" (mouseleave)="hovering = false; currentIndex = null" (click)="onClick()" (mouseover)="currentIndex = i"
     class="completer-row" [class.completer-selected-row]="i === currentIndex" *ngFor="let item of items; let i = index">
     <div class="completer-title">{{item.title}}</div>
