--- a/src/app/modules/ngx-completer/ngx-completer.component.html
+++ b/src/app/modules/ngx-completer/ngx-completer.component.html
@@ -2,7 +2,8 @@
   <input [attr.id]="inputId.length > 0 ? inputId : null" type="search" [ngClass]="inputClass" [(ngModel)]="searchStr" (ngModelChange)="textInputSubject.next($event)"
     [attr.name]="inputName" [attr.maxlength]="maxChars" [disabled]="disableInput" autocomplete="off" autocorrect="off" autocapitalize="off"
     ngx-completer-input (moveDown)="completerDropdown.moveDown()" (moveUp)="completerDropdown.moveUp()" (selection)="onSelection()"
-  (blur)="onBlur($event)" (focus)="onFocus($event)"/>
+    (blur)="onBlur($event)" (focus)="onFocus($event)" [placeholder]="placeholder" />
 
-  <ngx-completer-dropdown [searchActive]="searchActive" [error]="error" [items]="items" (itemClicked)="onSelected($event)"></ngx-completer-dropdown>
+  <ngx-completer-dropdown [searchActive]="searchActive" [error]="error" [items]="items" (itemClicked)="onSelected($event)"
+    [textSearching]="textSearching" [textNoResults]="textNoResults"></ngx-completer-dropdown>
 </div>
